package moodtracker.restserver;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class MoodModelApplication {

  public static void main(String[] args) {
    SpringApplication.run(MoodModelApplication.class, args);

  }
}
